# moodtunes-pwa

./: .coverage  .coveragerc  .pre-commit-config.yaml  CHANGELOG.md  CORPORATE_VPN_SOLUTION.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  GITHUB_ACTIONS_FIX.md  GITHUB_UPLOAD_GUIDE.md  MOBILE_SETUP.md  PIPELINE_COMPLETE.md  PIPELINE_EXECUTION_LOG.md  PIPELINE_REUSE_GUIDE.md  PIPELINE_STATUS.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SECURITY.md  PWA_QUICKSTART.md  Procfile  QUALITY_IMPROVEMENTS_SUMMARY.md  README.md  README_PIPELINE.md  RENDER_DEPLOYMENT.md  RENDER_DEPLOYMENT_COMPLETE.md  RENDER_DEPLOYMENT_INSTRUCTIONS.md  RENDER_FIX_APP_PRODUCTION.md  RENDER_QUICK_CHECKLIST.md  RENDER_SERVICE_DEBUG.md  UPLOAD_CHECKLIST.md  URGENT_RENDER_FIX.md  app.py  app_minimal.py  app_production.py  build.sh  check_and_format.sh  coverage.xml  emergency_fix.sh  lighthouserc.js  pyproject.toml  quality-report.json  render-simple.yaml  (+6 more)
.github/workflows/: ci-cd.yml  test-playlists.yml
docs/: QUALITY_GATES_GUIDE.md  QUALITY_GATES_SUMMARY.md  README.md  SEARCH_CI_CD_INTEGRATION.md  SEARCH_TEST_CHECKLIST.md
scripts/: check_deployment.sh  deployment_checker.sh  eco_check.py  emergency_deploy_fix.sh  generate_icons.py  monitor_pipeline.sh  render_diagnostic.sh  simple_search_test.py  start.sh  start_moodtunes.bat  start_with_ngrok.bat  test_search_functionality.py
src/services/: playlist_service.py
static/: manifest.json  pwa.js  script.js  service-worker.js  style.css
templates/: index.html
tests/: test_frontend.py  test_playlists.py
